--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -26,8 +26,20 @@
 
 
 [[constraint]]
+  name = "github.com/allegro/bigcache"
+  version = "1.1.0"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/bluele/gcache"
+
+[[constraint]]
   name = "github.com/kpango/glg"
   version = "1.2.1"
+
+[[constraint]]
+  name = "github.com/patrickmn/go-cache"
+  version = "2.1.0"
 
 [prune]
   go-tests = true
