--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -34,6 +34,10 @@
   name = "github.com/bluele/gcache"
 
 [[constraint]]
+  name = "github.com/cespare/xxhash"
+  version = "1.1.0"
+
+[[constraint]]
   name = "github.com/kpango/glg"
   version = "1.2.1"
 
