--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 *.lock
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+*.gdb
 
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
