--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,15 @@
 alias:
   default: &default
-    working_directory: /go/src/github.com/kpango/gache
     docker:
-      - image: circleci/golang:1.17
+      - image: circleci/go:1.19
         environment:
-          GOPATH: "/go"
           GO111MODULE: "on"
           REPO_NAME: "kpango"
           IMAGE_NAME: "gache"
           GITHUB_API: "https://api.github.com/"
           DOCKER_USER: "kpango"
   setup_remote_docker: &setup_remote_docker
-    version: 19.03.4
+    version: 20.10.18
     docker_layer_caching: true
 
 version: 2
