--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 alias:
   default: &default
     docker:
-      - image: circleci/go:1.19
+      - image: cimg/go:1.20.2
         environment:
           GO111MODULE: "on"
           REPO_NAME: "kpango"
